# animationCombiner

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
animationCombiner/: __init__.py  animation.py  preferences.py  registry.py
animationCombiner/api/: actions.py  animation.py  body_parts.py  loader.py  model.py  skeletons.py
animationCombiner/operators/: __init__.py  apply.py  armature.py  file_action.py  process.py
animationCombiner/operators/files/: export.py  exporter.py  importer.py
animationCombiner/parsers/: __init__.py  amc_parser.py  error.py  registry.py
animationCombiner/parsers/base/: exporter.py  importer.py
animationCombiner/parsers/messif/: __init__.py  exporter.py  importer.py
animationCombiner/resources/: test.data
animationCombiner/ui/: __init__.py  action.py  action_table.py  menus.py  table_controls.py
animationCombiner/ui/tables/: action.py  group.py
animationCombiner/utils/: __init__.py  coordinates.py  poses.py  rotation.py  transform.py  weakget.py
