[tool.poetry]
name = "animationcombiner"
version = "0.1.0"
description = ""
authors = ["pehala <halapetr@selfnet.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
mathutils = "*"
blender-stubs = "^3.12.27"
numpy = "*"
black = {extras = ["d"], version = "*"}
pylint = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
